<?xml version="1.0"?>
<package format="2">
  <name>costmap_cspace</name>
  <version>0.17.5</version>
  <description>3-dof configuration space costmap package</description>

  <maintainer email="tomohiro.oku@gmai.com">Tomohiro Oku</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>
  <author email="tomohiro.oku@gmail.com">Tomohiro Oku</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>geometry_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>

  <depend>costmap_cspace_msgs</depend>
  <depend>neonavigation_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
