<?xml version="1.0"?>
<package format="2">
  <name>joystick_interrupt</name>
  <version>0.1.0</version>
  <description>Interrupt cmd_vel by joystick input</description>

  <maintainer email="tomohiro.oku2023@gmail.com">Tomohiro Oku</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>topic_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
