<?xml version="1.0"?>
<package format="2">
  <name>map_organizer</name>
  <version>0.1.0</version>
  <description>Layered costmap organizer package</description>

  <maintainer email="tomohiro.oku2023@gmail.com">Tomohiro Oku</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>geometry_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>map_organizer_msgs</depend>

  <depend>eigen</depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
