<?xml version="1.0"?>
<package format="2">
  <name>planner_cspace</name>
  <version>0.1.0</version>
  <description>3-dof configuration space planner for mobile robot</description>

  <maintainer email="tomohiro.oku2023@gmail.com">Tomohiro Oku</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>map_server</test_depend>
  <test_depend>trajectory_tracker</test_depend>

  <!-- <depend>rclcpp_action</depend> -->
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>costmap_cspace</depend>
  <depend>costmap_cspace_msgs</depend>
  <depend>neonavigation_metrics_msgs</depend>
  <depend version_gte="0.1.0">planner_cspace_msgs</depend>
  <depend>trajectory_tracker</depend>
  <depend>trajectory_tracker_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
