<?xml version="1.0"?>
<package format="2">
  <name>trajectory_tracker</name>
  <version>0.1.0</version>
  <description>Path following control package for wheeled mobile robot</description>

  <maintainer email="tomohiro.oku2023@gmail.com">Tomohiro Oku</maintainer>
  <license>BSD</license>
  <author email="atsushi.w@ieee.org">Atsushi Watanabe</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>eigen</depend>

  <depend version_gte="0.1.0">trajectory_tracker_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
